[package]
name = "pass2csv"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
hashlink = "0.7.0"
serde = { version = "1", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
walkdir = "2.3.2"
